--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     
-    <link rel="stylesheet" href="Spin The Wheel.css" type="text/css" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
     <script type="text/javascript" src="Winwheel.min.js"></script>
     <script type="text/javascript" src="TweenMax.min.js"></script>
 </head>
