--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div id="MainTitle">
             <h1>Spin The Wheel</h1>
             <p>Click <b>SPIN</b> to start winning!</p>
-            <span class="switcher switcher-1">
-                <input type="checkbox" id="switcher-1">
-                <label for="switcher-1"></label>
+            <span class="toggle">
+                <input type="checkbox" id="Toggle">
+                <label for="Toggle"></label>
              </span>
         </div>
         
