--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Spin The Wheel</h1>
             <p>Click <b>SPIN</b> to start winning!</p>
             <span class="toggle">
-                <input type="checkbox" id="Toggle">
+                <input type="checkbox" checked id="Toggle">
                 <label for="Toggle"></label>
              </span>
         </div>
