--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="Winwheel.min.js"></script>
     <script type="text/javascript" src="TweenMax.min.js"></script>
 </head>
-<body onload="bodyLoad();loadAdminSettings();">
+<body onload="bodyLoad();loadAdminSettings(0);">
     <div id="Main">
         <div id="MainTitle">
             <h1>Spin The Wheel</h1>
@@ -63,13 +63,20 @@
                 <h2>Admin Settings</h2>
             </div>
             <div class="content">
-                <div>
-                    <button onclick="addPrizeInput()">Add</button>
-                    <button onclick="updatePrizeInput()">Update</button>
+                <div id="ContentButtonsContainer">
+                    <button class="add button clickable" onclick="addPrizeInput()">Add</button>
+                    <button class="update button clickable" onclick="updatePrizeInput(); updateSegments();">Update</button>
+                    <button class="refresh button clickable" onclick="loadAdminSettings(1); updateSegments();">Refresh</button>
                 </div>
                 <div>
                     <label>Current Prizes:</label>
                 </div>
+                <div id="PrizeListHeader">
+                    <div>Prize</div>
+                    <div>Chance</div>
+                    <div>Color</div>
+                </div>
+                <!-- DO NOT TOUCH id=PrizeList -->
                 <div id="PrizeList">
                 </div>
             </div>
