--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <div id="AdminControls">
+    <div id="AdminControls" class="width90px">
         <!-- Floating Action Button(FAB) -->
         <div id="FAB">
             <button class="icon" onclick="openSettings()">
